# mx6

./: .gitignore  CMakeLists.txt  README.md  conventions.md
cmake/: DeployVST3.cmake  PackageVST3Archive.cmake
releases/V01.00/: readme.md
source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: DspCore.h  MultibandProcessor.h
source/editor/: PluginEditor.cpp
source/processor/: DspCore.cpp  MultibandCrossover.cpp  MultibandProcessor.cpp
